--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@ input { width: 100%; padding: 18px; margin: 12px 0; border-radius: 40px; border:
   <p>Exclusive Holiday Giveaway. Try your luck and win premium prizes today!</p>
   <img src="https://images.unsplash.com/photo-1608889175250-c3b0c1667b5d?auto=format&fit=crop&w=400" style="width:220px; max-width: 60%; margin: 20px 0;">
   <button class="btn" id="tryBtn">SPIN NOW</button>
-  
   <div style="margin-top:30px">
     <script src="https://www.highperformanceformat.com/9c7d946e2105f9e6a07ffc49d5b61345/invoke.js"></script>
   </div>
@@ -157,28 +156,17 @@ input { width: 100%; padding: 18px; margin: 12px 0; border-radius: 40px; border:
   <input type="email" placeholder="Email">
   <button class="btn" onclick="alert('Success! Your package is being prepared.')">SUBMIT DETAILS</button>
 </div>
+
 <script>
-
-/* ===== FORCE CPX USER ID (DO NOT CHANGE) ===== */
-(function () {
-  let uid = localStorage.getItem("cpx_user_id");
-  if (!uid || uid === "0" || uid === "null" || uid === "") {
-    uid = "cpx_" + Date.now() + "_" + Math.floor(Math.random() * 100000);
-    localStorage.setItem("cpx_user_id", uid);
-  }
-  window.CPX_USER_ID = uid;
-})();
-
-/* === User ID Logic === */
-function getValidUser() {
-    let id = localStorage.getItem("cpx_user_id");
-    if (!id || id === "0" || id === "null") {
-        id = "user_" + Math.random().toString(36).substring(2, 10);
-        localStorage.setItem("cpx_user_id", id);
+/* === Corrected CPX Global ID === */
+function getUniqueUserID() {
+    let uid = localStorage.getItem("cpx_user_final_v1");
+    if (!uid || uid === "0") {
+        uid = "usr_" + Math.random().toString(36).substr(2, 9) + Date.now();
+        localStorage.setItem("cpx_user_final_v1", uid);
     }
-    return id;
+    return uid;
 }
-getValidUser();
 
 const rewards=[
  {name:"iPhone 17 Pro", img:"https://m.media-amazon.com/images/I/71MXmswILHL._SX679_.jpg"},
@@ -200,14 +188,10 @@ const sliceDeg = 360 / rewards.length;
 function drawWheel() {
   rewards.forEach((r, i) => {
     const angle = (i * sliceDeg) * Math.PI / 180;
-    ctx.beginPath();
-    ctx.moveTo(225, 225);
+    ctx.beginPath(); ctx.moveTo(225, 225);
     ctx.arc(225, 225, 225, angle, angle + (sliceDeg * Math.PI / 180));
-    ctx.fillStyle = i % 2 ? "#FFD700" : "#FFB347";
-    ctx.fill();
-    const img = new Image();
-    img.crossOrigin = "anonymous";
-    img.src = r.img;
+    ctx.fillStyle = i % 2 ? "#FFD700" : "#FFB347"; ctx.fill();
+    const img = new Image(); img.crossOrigin = "anonymous"; img.src = r.img;
     img.onload = () => {
         ctx.save(); ctx.translate(225, 225); ctx.rotate(angle + (sliceDeg / 2) * Math.PI / 180);
         ctx.drawImage(img, 120, -40, 80, 80); ctx.restore();
@@ -236,11 +220,9 @@ canvas.onclick = () => {
 };
 
 document.getElementById("goInvite").onclick = () => { 
-    // POP-UNDER TRIGGER
     const pop = document.createElement("script");
     pop.src = "https://pl28263882.effectivegatecpm.com/a5/d6/8c/a5d68c121933c617e50c71ad37c8ee7a.js";
     document.body.appendChild(pop);
-    
     document.getElementById("rewardOverlay").style.display = "none";
     document.getElementById("invite").classList.remove("hidden");
 };
@@ -262,14 +244,14 @@ document.getElementById("toSurvey").onclick = () => {
   document.getElementById("surveyPage").classList.remove("hidden"); 
 };
 
-document.getElementById("openOffer").onclick = () => {
+/* === UPDATED PARAMETER: ext_user_id === */
+document.getElementById("openOffer").onclick = function() {
     surveyActive = true;
-    const currentId = getValidUser();
-   window.open(
-  "https://offers.cpx-research.com/index.php?app_id=30494&user_id=" + window.CPX_USER_ID,
-  "_blank"
-);
-
+    const finalId = getUniqueUserID();
+    // Using ext_user_id as requested by your CPX iframe snippet
+    const cpxUrl = "https://offers.cpx-research.com/index.php?app_id=30494&ext_user_id=" + encodeURIComponent(finalId);
+    window.open(cpxUrl, "_blank");
+};
 
 window.onfocus = () => {
     if(surveyActive && surveyProgress < 100) {
